[gd_scene load_steps=3 format=3 uid="uid://achievement_toast"]

[ext_resource type="Script" path="res://scripts/ui/achievement_toast.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.08, 0.06, 0.15, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.9, 0.75, 0.2, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 16.0
content_margin_top = 12.0
content_margin_right = 16.0
content_margin_bottom = 12.0

[node name="AchievementToast" type="PanelContainer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -160.0
offset_top = 20.0
offset_right = 160.0
offset_bottom = 90.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")
script = ExtResource("1_script")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 12

[node name="AchievementIcon" type="Label" parent="HBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(0.9, 0.75, 0.2, 1)
text = "â˜…"

[node name="VBox" type="VBoxContainer" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="AchievementName" type="Label" parent="HBox/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.9, 0.75, 0.2, 1)
text = "Achievement Unlocked!"

[node name="AchievementDesc" type="Label" parent="HBox/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.7, 0.7, 0.8, 1)
text = "Description goes here"
